# T-MI

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  file_header.txt
.config/: lingua.dic
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: burnin-label-notification.yml  publish-docker-release.yml  publish-draft-release.yml  release-bot.yml  release-candidate.yml
.rpm/: polkadot.spec
cli/: Cargo.toml  build.rs
cli/browser-demo/: index.html
cli/src/: browser.rs  cli.rs  command.rs  lib.rs
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
doc/: docker.md  shell-completion.md
docker/: Dockerfile  build.sh  docker-compose-local.yml  docker-compose.yml  readme-docker.adoc  sentry-docker-compose.yml
erasure-coding/: Cargo.toml
erasure-coding/fuzzer/: Cargo.toml
erasure-coding/fuzzer/src/: reconstruct.rs  round_trip.rs
erasure-coding/src/: lib.rs  wrapped_shard.rs
node/collation-generation/: Cargo.toml
node/collation-generation/src/: error.rs  lib.rs
node/core/approval-voting/: Cargo.toml
node/core/av-store/: Cargo.toml
node/core/backing/: Cargo.toml
node/core/backing/src/: lib.rs
node/core/bitfield-signing/: Cargo.toml
node/core/bitfield-signing/src/: lib.rs
node/core/candidate-selection/: Cargo.toml
node/core/candidate-validation/: Cargo.toml
node/core/candidate-validation/src/: lib.rs
node/core/chain-api/: Cargo.toml
node/core/proposer/: Cargo.toml
node/core/proposer/src/: lib.rs
node/core/provisioner/: Cargo.toml
node/core/runtime-api/: Cargo.toml
node/core/runtime-api/src/: cache.rs  lib.rs
node/jaeger/: Cargo.toml
node/jaeger/src/: lib.rs
node/metered-channel/src/: bounded.rs  lib.rs  unbounded.rs
node/network/approval-distribution/: Cargo.toml
node/network/approval-distribution/src/: lib.rs  tests.rs
node/network/availability-distribution/: Cargo.toml
node/network/availability-distribution/src/: lib.rs  tests.rs
node/network/availability-recovery/: Cargo.toml
node/network/availability-recovery/src/: error.rs  lib.rs  tests.rs
node/network/bitfield-distribution/: Cargo.toml
node/network/bridge/: Cargo.toml
node/network/collator-protocol/: Cargo.toml
node/network/collator-protocol/src/: collator_side.rs  lib.rs  validator_side.rs
node/network/pov-distribution/: Cargo.toml
node/network/pov-distribution/src/: error.rs  lib.rs  tests.rs
node/network/protocol/: Cargo.toml
node/network/protocol/src/: lib.rs  peer_set.rs  request_response.rs
node/network/protocol/src/request_response/: request.rs  v1.rs
node/network/statement-distribution/: Cargo.toml
node/network/statement-distribution/src/: lib.rs
node/overseer/: Cargo.toml
node/overseer/examples/: minimal-example.rs
node/overseer/src/: lib.rs
node/primitives/: Cargo.toml
node/primitives/src/: approval.rs  lib.rs
node/service/: Cargo.toml  README.adoc
node/service/res/: kusama.json  rococo.json  westend.json
node/service/src/: chain_spec.rs  client.rs  grandpa_support.rs  lib.rs
node/subsystem/: Cargo.toml
node/subsystem-test-helpers/: Cargo.toml
node/subsystem-test-helpers/src/: lib.rs
node/subsystem-util/: Cargo.toml
node/subsystem-util/src/: lib.rs  validator_discovery.rs
node/subsystem/src/: errors.rs  lib.rs  messages.rs
node/test/client/: Cargo.toml
node/test/client/src/: block_builder.rs  lib.rs
node/test/service/: Cargo.toml
parachain/: Cargo.toml  README.adoc
parachain/src/: lib.rs  primitives.rs  wasm_api.rs
parachain/src/wasm_executor/: mod.rs  validation_host.rs
parachain/test-parachains/: Cargo.toml
parachain/test-parachains/adder/: Cargo.toml
parachain/test-parachains/adder/collator/: Cargo.toml  README.md
parachain/test-parachains/adder/collator/src/: cli.rs  lib.rs  main.rs
parachain/test-parachains/adder/collator/tests/: integration.rs
parachain/test-parachains/halt/: build.rs
parachain/test-parachains/src/: lib.rs
parachain/test-parachains/tests/: lib.rs
primitives/: Cargo.toml  README.adoc
primitives/src/: lib.rs  v0.rs  v1.rs
roadmap/: parachains.md
roadmap/implementers-guide/: README.md  book.toml
roadmap/implementers-guide/src/: README.md  architecture.md  further-reading.md  glossary.md  messaging.md  protocol-approval.md  protocol-overview.md
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: claims.rs  crowdloan.rs  impls.rs  lib.rs  paras_registrar.rs  paras_sudo_wrapper.rs  purchase.rs  slot_range.rs  slots.rs
runtime/kusama/: Cargo.toml
runtime/kusama/src/: constants.rs  lib.rs
runtime/parachains/: Cargo.toml
runtime/parachains/src/: configuration.rs  dmp.rs  hrmp.rs  inclusion.rs  inclusion_inherent.rs  initializer.rs  lib.rs  mock.rs  origin.rs  paras.rs  reward_points.rs  scheduler.rs  session_info.rs  ump.rs  util.rs
runtime/polkadot/: Cargo.toml  README.adoc
runtime/polkadot/src/: constants.rs  lib.rs
runtime/rococo/: Cargo.toml  build.rs
runtime/rococo/src/: constants.rs  lib.rs  propose_parachain.rs
runtime/test-runtime/: Cargo.toml  build.rs
runtime/test-runtime/src/: constants.rs  lib.rs
runtime/westend/: Cargo.toml  build.rs
runtime/westend/src/: constants.rs  lib.rs
scripts/: adder-collator.sh  two-node-local-net.sh
scripts/docker/: Dockerfile  release.Dockerfile
scripts/github/: generate_release_text.rb  polkadot_release.erb
scripts/gitlab/: check_extrinsics_ordering.sh  check_labels.sh  check_runtime.sh  lib.sh  test_deterministic_wasm.sh
scripts/kubernetes/: Chart.yaml  README.md  values.yaml
scripts/kubernetes/templates/: serviceaccount.yaml
scripts/packaging/: polkadot.service
scripts/packaging/deb-maintainer-scripts/: postinst
src/: README.adoc  main.rs
statement-table/: Cargo.toml  README.adoc
statement-table/src/: generic.rs  lib.rs
tests/: invalid_order_arguments.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs
xcm/src/: lib.rs
xcm/src/v0/: junction.rs  multi_location.rs
xcm/xcm-builder/: Cargo.toml
xcm/xcm-executor/: Cargo.toml
(+92 files in other folders)
