[package]
name = "tmi-node-core-backing"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
sp-keystore = { git = "https://github.com/tmi/substrate", branch = "master" }
tmi-primitives = { path = "../../../primitives" }
tmi-node-primitives = { path = "../../primitives" }
tmi-subsystem = { package = "tmi-node-subsystem", path = "../../subsystem" }
tmi-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "tmi-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "tmi-statement-table", path = "../../../statement-table" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
thiserror = "1.0.23"

[dev-dependencies]
sp-core = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/tmi/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/tmi/substrate", branch = "master" }
futures = { version = "0.3.12", features = ["thread-pool"] }
assert_matches = "1.4.0"
tmi-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
