[package]
name = "tmi-node-core-candidate-validation"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tracing = "0.1.22"
tracing-futures = "0.2.4"

sp-core = { package = "sp-core", git = "https://github.com/tmi/substrate", branch = "master" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }

tmi-primitives = { path = "../../../primitives" }
tmi-parachain = { path = "../../../parachain" }
tmi-node-primitives = { path = "../../primitives" }
tmi-subsystem = { package = "tmi-node-subsystem", path = "../../subsystem" }
tmi-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/tmi/substrate", branch = "master" }
futures = { version = "0.3.12", features = ["thread-pool"] }
assert_matches = "1.4.0"
tmi-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
