[package]
name = "tmi-node-core-proposer"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
futures-timer = "3.0.2"
tracing = "0.1.22"
tmi-node-subsystem = { path = "../../subsystem" }
tmi-overseer = { path = "../../overseer" }
tmi-primitives = { path = "../../../primitives" }
sc-basic-authorship = { git = "https://github.com/tmi/substrate", branch = "master" }
sc-block-builder = { git = "https://github.com/tmi/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-api = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-core = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/tmi/substrate", branch = "master" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/tmi/substrate", branch = "master" }
