[package]
name = "tmi-node-core-runtime-api"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tracing = "0.1.22"
tracing-futures = "0.2.4"
memory-lru = "0.1.0"
parity-util-mem = { version = "0.9.0", default-features = false }

sp-api = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-core = { git = "https://github.com/tmi/substrate", branch = "master" }

tmi-primitives = { path = "../../../primitives" }
tmi-subsystem = { package = "tmi-node-subsystem", path = "../../subsystem" }
tmi-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
sp-core = { git = "https://github.com/tmi/substrate", branch = "master" }
futures = { version = "0.3.12", features = ["thread-pool"] }
tmi-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
