[package]
name = "tmi-approval-distribution"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
tmi-node-primitives = { path = "../../primitives" }
tmi-node-network-protocol = { path = "../protocol" }
tmi-node-subsystem = { path = "../../subsystem" }
tmi-node-subsystem-util = { path = "../../subsystem-util" }
tmi-primitives = { path = "../../../primitives" }

futures = "0.3.8"
tracing = "0.1.22"
tracing-futures = "0.2.4"

[dev-dependencies]
sp-core = { git = "https://github.com/tmi/substrate", branch = "master", features = ["std"] }

tmi-node-subsystem-util = { path = "../../subsystem-util" }
tmi-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }

assert_matches = "1.4.0"
schnorrkel = { version = "0.9.1", default-features = false }
rand_core = "0.5.1" # should match schnorrkel
env_logger = "0.8.2"
log = "0.4.13"
