[package]
name = "tmi-collator-protocol"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tracing = "0.1.22"
tracing-futures = "0.2.4"
thiserror = "1.0.23"


tmi-primitives = { path = "../../../primitives" }
tmi-node-network-protocol = { path = "../../network/protocol" }
tmi-node-subsystem-util = { path = "../../subsystem-util" }
tmi-subsystem = { package = "tmi-node-subsystem", path = "../../subsystem" }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.8.2"
assert_matches = "1.4.0"
futures-timer = "3.0.2"

sp-core = { git = "https://github.com/tmi/substrate", branch = "master", features = ["std"] }
sp-keyring = { git = "https://github.com/tmi/substrate", branch = "master" }

tmi-subsystem-testhelpers = { package = "tmi-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
