[package]
name = "test-parachain-adder-collator"
version = "0.7.26"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator for the adder test parachain"
edition = "2018"

[[bin]]
name = "adder-collator"
path = "src/main.rs"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
futures = "0.3.12"
futures-timer = "3.0.2"
log = "0.4.13"
structopt = "0.3.21"

test-parachain-adder = { path = ".." }
tmi-primitives = { path = "../../../../primitives" }
tmi-cli = { path = "../../../../cli" }
tmi-service = { path = "../../../../node/service" }
tmi-node-primitives = { path = "../../../../node/primitives" }
tmi-node-subsystem = { path = "../../../../node/subsystem" }

sc-cli = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-core = { git = "https://github.com/tmi/substrate", branch = "master" }
sc-authority-discovery = { git = "https://github.com/tmi/substrate", branch = "master" }
sc-service = { git = "https://github.com/tmi/substrate", branch = "master" }

[dev-dependencies]
tmi-parachain = { path = "../../.." }
tmi-test-service = { path = "../../../../node/test/service" }

substrate-test-utils = { git = "https://github.com/tmi/substrate", branch = "master" }
sc-service = { git = "https://github.com/tmi/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/tmi/substrate", branch = "master" }

tokio = { version = "0.2", features = ["macros"] }

[features]
real-overseer = [ "tmi-service/real-overseer" ]
